--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,3 +33,20 @@ services:
     ports:
       - "9042:9042"
     restart: unless-stopped
+
+  minio:
+    image: minio/minio:latest
+    container_name: minio_burung_storage
+    command: server /data --console-address ":9001"
+    environment:
+      MINIO_ROOT_USER: burung_app
+      MINIO_ROOT_PASSWORD: burung_app123
+    ports:
+      - "9000:9000"   # API S3 compatible
+      - "9001:9001"   # MinIO console UI
+    volumes:
+      - minio_data:/data
+    restart: unless-stopped
+
+volumes:
+  minio_data:
