connect to minIO

--- a/.env
+++ b/.env
@@ -31,6 +31,12 @@ MEILIHOST=localhost
 MEILIPORT=7700
 MEILIKEY=SuperSecureKey1234567890
 
+MINIO_ENDPOINT=127.0.0.1:9000
+MINIO_USE_SSL=false
+MINIO_ACCESS_KEY=burung_app
+MINIO_SECRET_KEY=burung_app123
+MINIO_SIGNED_URL_EXPIRE_SEC=300
+
 ACCESS_CTRL=http://localhost:5173 
 REQ_LIMIT=10
 BURST_LIMIT=100
