upload foto profile pengguna ke media_storage

--- a/.env
+++ b/.env
@@ -36,6 +36,9 @@ MINIO_USE_SSL=false
 MINIO_ACCESS_KEY=burung_app
 MINIO_SECRET_KEY=burung_app123
 MINIO_SIGNED_URL_EXPIRE_SEC=300
+MINIO_PHOTOS_BUCKET=burung-foto
+MINIO_VIDEOS_BUCKET=burung-video
+MINIO_DOKUMENS_BUCKET=burung-dokumen
 
 ACCESS_CTRL=http://localhost:5173 
 REQ_LIMIT=10
