previsioning rmq selesai

--- a/.env
+++ b/.env
@@ -44,6 +44,12 @@ ACCESS_CTRL=http://localhost:5173
 REQ_LIMIT=10
 BURST_LIMIT=100
 
+RMQ_HOST=localhost
+RMQ_USER=guest
+RMQ_PASS=guest
+EXCHANGE=md.cud
+RMQ_PORT=5672
+
 CONFIG_SMTP_HOST=smtp.gmail.com
 CONFIG_SMTP_PORT=587
 CONFIG_SENDER_NAME=Burung app Registration <ananlol156@gmail.com>
