oke kelar benerin dikit rmq nya

--- a/.env
+++ b/.env
@@ -45,8 +45,8 @@ REQ_LIMIT=10
 BURST_LIMIT=100
 
 RMQ_HOST=localhost
-RMQ_USER=guest
-RMQ_PASS=guest
+RMQ_USER=burung_user
+RMQ_PASS=burung_pass
 EXCHANGE=md.cud
 RMQ_PORT=5672
 
