--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,9 +16,11 @@ services:
     environment:
       RABBITMQ_DEFAULT_USER: burung_user
       RABBITMQ_DEFAULT_PASS: burung_pass
-      RABBITMQ_LOAD_DEFINITIONS: /etc/rabbitmq/definitions_vhost_rmq.json
     volumes:
+      - ./rabbitmq.conf:/etc/rabbitmq/rabbitmq.conf:ro
       - ./definitions_vhost_rmq.json:/etc/rabbitmq/definitions_vhost_rmq.json:ro
+
+
   meilisearch:
     image: getmeili/meilisearch:latest
     container_name: meilisearch_burung_search_engine
