2 service pengguna alamat dan barang next 3 entity kelarr

--- a/.env
+++ b/.env
@@ -23,8 +23,8 @@ DB_REPLICA_CLIENT_NAME=development_burung
 
 RDSHOST=localhost
 RDSPORT=6379
-RDSENTITY=1
-RDSBARANG=2
+RDSAUTH=1
+RDSSESSION=2
 RDSENGAGEMENT=3
 
 MEILIHOST=localhost
